src/main/java/com/test/coursemanagementspring/core/errors/ValidationException.java
package com.test.coursemanagementspring.core.errors;

public class ValidationException extends Exception {
    public ValidationException(String message) {
        super(message);
    }
}
